# Binary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: stuff_you_should_know.md
config/main/: binary_config.yaml  retro_config.yaml
dep/: CMakeLists.txt  README.md
docs/: cpp_style_guide.md
shaders/: CMakeLists.txt  shader.frag  shader.vert
src/: CMakeLists.txt  gbengine.cpp  main.cc  main.cpp
src/drivers/: peripherals_sdl.cpp  renderer.cpp  renderer_vulkan.cpp  renderer_vulkan_buffer.cpp  renderer_vulkan_command_buffer.cpp  renderer_vulkan_debug.cpp  renderer_vulkan_desciptor.cpp  renderer_vulkan_device.cpp  renderer_vulkan_image.cpp  renderer_vulkan_index_buffer.cpp  renderer_vulkan_instance.cpp  renderer_vulkan_pipeline.cpp  renderer_vulkan_renderpass.cpp  renderer_vulkan_swapchain.cpp  renderer_vulkan_sync_objects.cpp  renderer_vulkan_vertex_buffer.cpp
src/drivers/include/: peripherals_sdl.h  renderer.h  renderer_opengl.h  renderer_vulkan.h
src/drivers/opengl/: renderer_opengl.cpp
src/drivers/sdl/: peripherals_sdl.cpp
src/drivers/vulkan/: renderer_vulkan.cpp  renderer_vulkan_buffer.cpp  renderer_vulkan_command_buffer.cpp  renderer_vulkan_debug.cpp  renderer_vulkan_desciptor.cpp  renderer_vulkan_device.cpp  renderer_vulkan_image.cpp  renderer_vulkan_index_buffer.cpp  renderer_vulkan_instance.cpp  renderer_vulkan_pipeline.cpp  renderer_vulkan_renderpass.cpp  renderer_vulkan_swapchain.cpp  renderer_vulkan_sync_objects.cpp  renderer_vulkan_uniform_buffer.cpp  renderer_vulkan_vertex_buffer.cpp
src/emulation/: gb_cpu.cpp  gb_disassembly.cpp  gb_emulator.cpp  gb_memory.cpp  gb_opcode.cpp  gb_processor.cpp
src/emulation/chip8/: chip8_processor.cpp
src/emulation/chip8/include/: chip8_instrcution_set.h  chip8_processor.h
src/emulation/gameboy/: CMakeLists.txt  gb_cpu.cpp  gb_emulator.cpp  gb_instruction.cpp
src/emulation/gameboy/include/: gb.h  gb_cpu.h  gb_emulator.h  gb_instruction.h  gb_memory.h
src/emulation/gameboy/test/: gb_cpu_test.cpp
src/emulation/gba/include/: arm7tdmi.h
src/emulation/include/: gb.h  gb_cpu.h  gb_disassembly.h  gb_emulator.h  gb_memory.h  gb_opcode.h  gb_peripheral.h  gb_processor.h
src/emulation/nes/include/: nes_6502.h  nes_emulation.h
src/gui/: gb_gui.cpp  gb_gui_main_menu.cpp  gb_gui_viewport.cpp
src/gui/include/: gb_gui.h
src/include/: gameboy_memory.h  gameboy_peripheral.h  gameboy_processor.h  gb_peripheral.h  gb_processor.h  gbengine.h
src/io/: io.cpp  logger.cpp
src/io/include/: io.h  logger.h
src/main/: main.cpp
src/main/include/: gbengine.h
src/types/include/: enums.h
test/: test_main.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/drivers/sdl/: test_peripherals_sdl.cpp
tests/emulators/gameboy/: test_gb_cpu.cpp
